plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/publishedLibrarySources/expectActualInLibrarySources/lib/src/iosMain/kotlin/Lib.ios.kt
package com.example.lib

actual val <!LINE_MARKER("descr='Has expects in nativeMain module'")!>topLevelVal<!>: String = ""

actual fun <!LINE_MARKER("descr='Has expects in commonMain module'")!>topLevelFun<!>() {}
